[package]
name = "floatdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
canadensis = "0.3.1"
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.5.0",features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0" }
usbd-hid = "0.7.0"
defmt = "0.3" #debugging tools
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] } #core tools
cortex-m-rt = "0.7.0"
embedded-can = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"
fixed = "1.27.0"
foc = "0.3.0"


[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "000b022ae2e52e9abaabbd10110b4c583fe4344c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "000b022ae2e52e9abaabbd10110b4c583fe4344c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "000b022ae2e52e9abaabbd10110b4c583fe4344c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "000b022ae2e52e9abaabbd10110b4c583fe4344c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "000b022ae2e52e9abaabbd10110b4c583fe4344c" }
